Attempting to fix bug that causes buttons to be invisible on mobile devices

--- a/app/client/stylesheets/styles.css
+++ b/app/client/stylesheets/styles.css
@@ -118,7 +118,7 @@ body {
 }
 
 #content-container {
-    position: relative;
+    position: fixed;
     display: flex;
     flex: 0 0 auto;
     flex-direction: column;
